--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/avatar.png"
+  avatar           : "images/Avatar.png"
   name             : "Fan Jia"
   pronouns         : # example: "she/her"  
   bio              : "Postdoc at Department of Mathematics, University of Utah"
