--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@ name                     : &name "Fan Jia"
 description              : &description "personal description"
 url                      : https://oyunfano.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "OyunfanO/fanjia.github.io"
+repository               : "OyunfanO/OyunfanO.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/Avatar.png"
+  avatar           : "./images/Avatar.png"
   name             : "Fan Jia"
   pronouns         : # example: "she/her"  
   bio              : "Postdoc at Department of Mathematics, University of Utah"
